<resources>
    <string name="app_name">VariousArchitecture</string>

    <string name="title_text">Various Architecture</string>
    <string name="content_text">MVC, MVP, MVVM, MVI 구조와\n장점 및 단점 알아보기</string>
    <string name="mvc_button_text">MVC</string>
    <string name="mvp_button_text">MVP</string>
    <string name="mvvm_button_text">MVVM</string>
    <string name="mvi_button_text">MVI</string>
</resources>