<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="view"
            type="com.choi.variousarchitecture.MainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/title_text"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_16"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/contentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            app:layout_constraintStart_toStartOf="@id/titleTextView"
            app:layout_constraintEnd_toEndOf="@id/titleTextView"
            android:text="@string/content_text"
            android:layout_marginTop="@dimen/margin_8"
            android:textSize="@dimen/text_size_medium"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/mvcButton"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/ShapeAppearanceOverlay.Material3.Button.MVC"
            android:text="@string/mvc_button_text"
            android:layout_marginTop="@dimen/margin_16"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mvpButton"
            app:layout_constraintTop_toBottomOf="@id/mvcButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/ShapeAppearanceOverlay.Material3.Button.MVP"
            android:text="@string/mvp_button_text"
            android:layout_marginTop="@dimen/margin_16"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mvvmButton"
            app:layout_constraintTop_toBottomOf="@id/mvpButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/ShapeAppearanceOverlay.Material3.Button.MVVM"
            android:text="@string/mvvm_button_text"
            android:layout_marginTop="@dimen/margin_16"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mviButton"
            app:layout_constraintTop_toBottomOf="@id/mvvmButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/ShapeAppearanceOverlay.Material3.Button.MVI"
            android:text="@string/mvi_button_text"
            android:layout_marginTop="@dimen/margin_16"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>